--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#server.error.whitelabel.enabled=false
 
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQL8Dialect
+
+#Database
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/todo
+
+#Configuration
+spring.datasource.password=samuel1995
+spring.datasource.username=sobunge
