adding secret to application.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/todo
 #Configuration
 spring.datasource.password=samuel1995
 spring.datasource.username=sobunge
+
+#Secret
+secret=pensasha
