updating my token manager and secret to be more than 256 bits

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.datasource.password=samuel1995
 spring.datasource.username=sobunge
 
 #Secret
-secret=pensasha
+secret=Jack quickly bought a dozen juicy oranges.
